# jtml

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: ci.yml
cli/: cmd_basic.cpp  cmd_fix.cpp  cmd_fmt_lint.cpp  cmd_lsp.cpp  cmd_refactor.cpp  cmd_serve.cpp  cmd_tutorial.cpp  commands.h  diagnostic_json.cpp  diagnostic_json.h  main.cpp  module_loader.cpp  module_loader.h  package_manager.cpp  package_manager.h  studio_shell.cpp  studio_shell.h  tutorial_shell.cpp  tutorial_shell.h  util.cpp  util.h
cmake/: JtmlVersion.cmake
demos/: README.md  example.jtml  index.jtml
demos/opspulse/: README.md  index.jtml  jtml.packages.json
demos/opspulse/components/layouts/: shell.jtml
demos/opspulse/components/ui/: app-header.jtml  app-sidebar.jtml  (+2 more)
demos/opspulse/pages/: dashboard.jtml  incidents.jtml  media.jtml  not-found.jtml  people.jtml  releases.jtml  settings.jtml  usage.jtml
demos/opspulse/stores/: app-state.jtml  filter-state.jtml  ops-data.jtml
docs/: README.md  ai-authoring-contract.md  ai-native-implementation-roadmap.md  deployment.md  embedding-c-api.md  jtml-competitive-features-roadmap.md  jtml-element-dictionary.md  jtml-friendly-grammar-and-implementation-plan.md  language-reference.md  language-server.md  media-graphics-roadmap.md  repo-file-audit.md  studio-redesign-proposal.md
docs/architecture/: language-family-design.md  observable-first-architecture-roadmap.md  studio-redesign-proposal.md
docs/archive/: jtml-friendly-grammar-and-implementation-plan.md  repo-file-audit.md
docs/reference/: ai-authoring-contract.md  jtml-element-dictionary.md  language-reference.md
docs/roadmaps/: 3d-custom-interfaces-roadmap.md  ai-native-implementation-roadmap.md  jtml-competitive-features-roadmap.md  media-graphics-roadmap.md  next-priorities.md
docs/tooling/: language-server.md  runtime-http-contract.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
editors/vscode/snippets/: jtml.code-snippets
editors/vscode/syntaxes/: jtml.tmLanguage.json
examples/: chat_app.jtml  dashboard.jtml  dicts.jtml  drag_and_drop_tasks.jtml  dynamic_replacement.jtml  friendly_advanced_form.jtml  friendly_component_isolation.jtml  friendly_components.jtml  friendly_counter.jtml  friendly_effect.jtml  friendly_elements.jtml  friendly_extern.jtml  friendly_fetch.jtml  friendly_fetch_invalidate.jtml  friendly_fetch_post.jtml  friendly_fetch_refresh.jtml  friendly_form.jtml  friendly_import_page.jtml  friendly_interop.jtml  friendly_media.jtml  friendly_module_component.jtml  friendly_redirect.jtml  friendly_route_guards.jtml  friendly_route_layout.jtml  friendly_route_load.jtml  friendly_routes.jtml  friendly_semantic_ui.jtml  friendly_store.jtml  friendly_types.jtml  html_syntax.jtml  imported_keywords.jtml  index.jtml  jtl_core.jtl  jtml_studio.jtml  keywords.jtml  live_input.jtml  login_form.jtml  profile_page.jtml  starter_counter.jtml  studio_logic.jtml  (+3 more)
examples/modules/: card.jtml  friendly_message.jtml
include/jtml/: array.h  ast.h  attribute_classifier.h  browser_runtime_assets.h  browser_runtime_emitter.h  c_api.h  client_manifest_emitter.h  diagnostic.h  dict.h  environment.h  expression_ir.h  expression_source.h  fix.h  formatter.h  friendly.h  friendly_formatter.h  function.h  instance_id_generator.h  interpreter.h  language_catalog.h  lexer.h  linter.h  module_resolver.h  parser.h  refactor.h  renderer.h  runtime_plan.h  runtime_plan_json.h  semantic.h  semantic_project_json.h  static_update_plan_emitter.h  transpiler.h  value.h  websocket_server.h
include/jtml/runtime/: static_update_plan_emitter.h
include/jtml/semantic/: module_graph.h
scripts/: benchmark_browser_runtime.sh  benchmark_runtime.sh  build_site.sh  jtml_bindings.cpp  package_cli.sh  verify_all.sh
site/: CNAME  app.js  deploy.html  examples.html  index.html  reference.html  security.html  styles.css  tools.html
src/: array.cpp  ast.cpp  attribute_classifier.cpp  browser_runtime_assets.cpp  browser_runtime_emitter.cpp  c_api.cpp  client_manifest_emitter.cpp  diagnostic.cpp  dict.cpp  environment.cpp  expression_ir.cpp  expression_source.cpp  fix.cpp  formatter.cpp  friendly.cpp  friendly_formatter.cpp  interpreter.cpp  language_catalog.cpp  lexer.cpp  linter.cpp  module_resolver.cpp  parser.cpp  refactor.cpp  runtime_plan.cpp  runtime_plan_json.cpp  semantic.cpp  semantic_project_json.cpp  transpiler.cpp  value.cpp
src/jtml/runtime/: static_update_plan_emitter.cpp
src/jtml/semantic/: module_graph.cpp
studio/reference/: catalog.json
studio/samples/: animation.jtml  charts.jtml  components.jtml  counter.jtml  dashboard.jtml  effects.jtml  fetch-post.jtml  fetch.jtml  form.jtml  manifest.json  media.jtml  redirect.jtml  routes.jtml  store.jtml
studio/sidebar/: catalog.json
test/: index.jtml
test/components/: card.jtml
test/stores/: app.jtml
tests/: CMakeLists.txt  test_attribute_classifier.cpp  test_c_api.cpp  test_cli_commands.cpp  test_diagnostics.cpp  test_fix.cpp  test_formatter.cpp  test_friendly.cpp  test_friendly_formatter.cpp  test_lexer.cpp  test_linter.cpp  test_module_resolver.cpp  test_parser.cpp  test_refactor.cpp  test_semantic.cpp  test_studio_samples.cpp  test_tutorial.cpp
tests/fixtures/performance/: composition.jtml  control_flow.jtml  keyed_list.jtml  large_keyed_rows.jtml  nested_component_update.jtml  static_counter.jtml
tutorial/00-welcome/: code.jtml  lesson.md
tutorial/01-hello/: code.jtml  lesson.md
tutorial/02-state/: code.jtml  lesson.md
tutorial/03-events/: code.jtml  lesson.md
tutorial/04-input/: code.jtml  lesson.md
tutorial/05-collections/: code.jtml  lesson.md
tutorial/06-subscribe/: code.jtml  lesson.md
tutorial/07-putting-it-together/: code.jtml  lesson.md
tutorial/08-data-fetch/: code.jtml  lesson.md
tutorial/09-stores/: code.jtml  lesson.md
tutorial/10-routes/: code.jtml  lesson.md
tutorial/11-components/: code.jtml  lesson.md
tutorial/12-compatibility-tooling/: code.jtml  lesson.md
tutorial/13-media-and-charts/: code.jtml  lesson.md
